--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -6,13 +6,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
-
+    <link rel="shortcut icon" href="{{ url_for('static', filename='dashboard/img/icons/usat_logo_red.jpg') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='login/fonts/icomoon/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='login/css/owl.carousel.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='login/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='login/css/style.css') }}">
 
     <title>USAT - Iniciar Sesion </title>
+    <style>
+        .bg {
+            display: flex;
+        }
+
+        .contents {
+            width: 100%;
+        }
+
+        .col-md-7 {
+            text-align: center;
+        }
+
+        .col-md-7 img {
+            margin-bottom: 20px;
+        }
+
+        .form-group input {
+            width: 100%;
+        }
+    </style>
 </head>
 
 <body>
@@ -35,8 +56,7 @@
                         <form action="#" method="post">
                             <div class="form-group first">
 
-                                <input type="text" class="form-control" placeholder="Usuario
-                                    id=" username">
+                                <input type="text" class="form-control" placeholder="Usuario" id="username">
                             </div>
                             <div class="form-group last mb-3">
                                 <input type="password" class="form-control" placeholder="Contraseña" id="password">
@@ -49,9 +69,11 @@
                                 </label>
                                 <span class="ml-auto"><a href="#" class="forgot-pass">Olvidé mi Contraseña</a></span>
                             </div>
-                            <form action="{{ url_for('index') }}" >
+
+                            <a href="{{url_for('index')}}" class="btn btn-block btn-primary">Acceder al Sistema</a>
+                            <!-- <form action="{{ url_for('index') }}" >
                                 <input type="submit" value="Acceder al Sistema" class="btn btn-block btn-primary">
-                            </form>
+                            </form> -->
                             
 
                         </form>
