--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -84,13 +84,13 @@
 					</li>
 
 					<li class="sidebar-item">
-						<a class="sidebar-link" href="ui-cards.html">
+						<a class="sidebar-link" href="{{url_for('docentes')}}">
 							<i class="align-middle" data-feather="grid"></i> <span class="align-middle">Docentes</span>
 						</a>
 					</li>
 
 					<li class="sidebar-item">
-						<a class="sidebar-link" href="ui-typography.html">
+						<a class="sidebar-link" href="{{url_for('horarios')}}">
 							<i class="align-middle" data-feather="align-left"></i> <span
 								class="align-middle">Horarios</span>
 						</a>
