Cambios en rutas

--- a/templates/dashboard/docentes.html
+++ b/templates/dashboard/docentes.html
@@ -20,6 +20,7 @@
     //         window.location.reload();
     //     }
     // });
+    //lanzaalaaaaaaa
 </script>
 <div class="container">
     <h2>Docentes</h2>
