--- a/static/login/css/style.css
+++ b/static/login/css/style.css
@@ -67,8 +67,8 @@ h2 {
   background-position: center; }
 
 .half a {
-  color: #888;
-  text-decoration: underline; }
+  color: #fff;
+}
 
 .half .btn {
   height: 54px;
