--- a/templates/dashboard/horarios.html
+++ b/templates/dashboard/horarios.html
@@ -25,7 +25,7 @@
     <h2>Horarios</h2>
 
     <!-- Dropdown para seleccionar semestre y escuela -->
-    <div class="form-row sd-6">
+    <div class="form-row">
         <div class="col-auto">
 
             <select class="form-control" id="semestre">
@@ -68,14 +68,16 @@
 <script>
     $(document).ready(function () {
         $('#tabla-cursos').DataTable({
-            "paging": false,
+            "paging": true,
+            //"autoFill": true, // Habilita AutoFill
+            "pagingType": 'numbers',
             "info": false,
             "stateSave": true,
             language: {
-                url: '//cdn.datatables.net/plug-ins/2.0.3/i18n/es-ES.json',
+                url: 'https://cdn.datatables.net/plug-ins/2.0.3/i18n/es-ES.json',
             },
-
         });
     });
 </script>
+
 {% endblock %}
