--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -16,17 +16,52 @@
 	<link href="{{ url_for('static', filename='dashboard/css/app.css') }}" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.datatables.net/2.0.3/css/dataTables.dataTables.css">
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs5/dt-2.0.3/datatables.min.css" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    <style>
+        .loader-wrapper {
+            position: fixed;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.7); /* fondo semi-transparente */
+            z-index: 9999; /* asegura que la pantalla de carga esté en la parte superior */
+            display: none; /* ocultar por defecto */
+        }
+
+        .loader {
+            border: 4px solid #f3f3f3;
+            border-radius: 50%;
+            border-top: 4px solid #3498db;
+            width: 50px;
+            height: 50px;
+            animation: spin 2s linear infinite;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            margin-top: -25px; /* mitad de la altura del loader */
+            margin-left: -25px; /* mitad del ancho del loader */
+        }
+
+        @keyframes spin {
+            0% { transform: rotate(0deg); }
+            100% { transform: rotate(360deg); }
+        }
+    </style>
 </head>
 
 <body>
 	<div class="wrapper">
-		<nav id="sidebar" class="sidebar js-sidebar">
+        <!-- Pantalla de carga -->
+        <div id="loader" class="loader-wrapper">
+            <div class="loader"></div>
+        </div>
+	<div class="wrapper">
+		<nav id="sidebar" class="sidebar js-sidebar ">
 			<div class="sidebar-content js-simplebar">
 
 				<a class="sidebar-brand" href="{{url_for('index')}}">
 					<img src="{{ url_for('static', filename='login/images/usat_logo_blank.png') }}" alt="logoescuela"
-					style="max-width: 110px; display: flex;">
-					<!-- <span class="align-middle">Sistema de Gestión de Carga Academica USAT</span> -->
+						style="max-width: 110px; display: flex;">
 				</a>
 
 				<ul class="sidebar-nav">
@@ -46,25 +81,6 @@
 							<i class="align-middle" data-feather="user"></i> <span class="align-middle">Perfil</span>
 						</a>
 					</li>
-
-					<!-- <li class="sidebar-item">
-						<a class="sidebar-link" href="pages-sign-in.html">
-							<i class="align-middle" data-feather="log-in"></i> <span class="align-middle">Sign In</span>
-						</a>
-					</li>
-	
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="pages-sign-up.html">
-							<i class="align-middle" data-feather="user-plus"></i> <span class="align-middle">Sign Up</span>
-						</a>
-					</li>
-	
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="pages-blank.html">
-							<i class="align-middle" data-feather="book"></i> <span class="align-middle">Blank</span>
-						</a>
-					</li> -->
-
 					<li class="sidebar-header">
 						Gestión
 					</li>
@@ -95,28 +111,6 @@
 								class="align-middle">Horarios</span>
 						</a>
 					</li>
-					<!-- 	
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="icons-feather.html">
-							<i class="align-middle" data-feather="coffee"></i> <span class="align-middle">Icons</span>
-						</a>
-					</li>
-	
-					<li class="sidebar-header">
-						Plugins & Addons
-					</li>
-	
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="charts-chartjs.html">
-							<i class="align-middle" data-feather="bar-chart-2"></i> <span class="align-middle">Charts</span>
-						</a>
-					</li>
-	
-					<li class="sidebar-item">
-						<a class="sidebar-link" href="maps-google.html">
-							<i class="align-middle" data-feather="map"></i> <span class="align-middle">Maps</span>
-						</a>
-					</li> -->
 				</ul>
 
 
@@ -124,157 +118,36 @@
 		</nav>
 
 		<div class="main">
-			<nav class="navbar navbar-expand navbar-light navbar-bg">
+
+			<nav class="navbar navbar-expand navbar-light navbar-bg sticky-top">
 				<a class="sidebar-toggle js-sidebar-toggle">
-					
 					<i class="hamburger align-self-center"></i>
 				</a>
-
 				<div class="navbar-collapse collapse">
+					
 					<ul class="navbar-nav navbar-align">
-						<!-- <li class="nav-item dropdown">
-							<a class="nav-icon dropdown-toggle" href="#" id="alertsDropdown" data-bs-toggle="dropdown">
-								<div class="position-relative">
-									<i class="align-middle" data-feather="bell"></i>
-									<span class="indicator">4</span>
-								</div>
-							</a>
-							<div class="dropdown-menu dropdown-menu-lg dropdown-menu-end py-0"
-								aria-labelledby="alertsDropdown">
-								<div class="dropdown-menu-header">
-									4 New Notifications
-								</div>
-								<div class="list-group">
-									<a href="#" class="list-group-item">
-										<div class="row g-0 align-items-center">
-											<div class="col-2">
-												<i class="text-danger" data-feather="alert-circle"></i>
-											</div>
-											<div class="col-10">
-												<div class="text-dark">Update completed</div>
-												<div class="text-muted small mt-1">Restart server 12 to complete the update.
-												</div>
-												<div class="text-muted small mt-1">30m ago</div>
-											</div>
-										</div>
-									</a>
-									<a href="#" class="list-group-item">
-										<div class="row g-0 align-items-center">
-											<div class="col-2">
-												<i class="text-warning" data-feather="bell"></i>
-											</div>
-											<div class="col-10">
-												<div class="text-dark">Lorem ipsum</div>
-												<div class="text-muted small mt-1">Aliquam ex eros, imperdiet vulputate
-													hendrerit et.</div>
-												<div class="text-muted small mt-1">2h ago</div>
-											</div>
-										</div>
-									</a>
-									<a href="#" class="list-group-item">
-										<div class="row g-0 align-items-center">
-											<div class="col-2">
-												<i class="text-primary" data-feather="home"></i>
-											</div>
-											<div class="col-10">
-												<div class="text-dark">Login from 192.186.1.8</div>
-												<div class="text-muted small mt-1">5h ago</div>
-											</div>
-										</div>
-									</a>
-									<a href="#" class="list-group-item">
-										<div class="row g-0 align-items-center">
-											<div class="col-2">
-												<i class="text-success" data-feather="user-plus"></i>
-											</div>
-											<div class="col-10">
-												<div class="text-dark">New connection</div>
-												<div class="text-muted small mt-1">Christina accepted your request.</div>
-												<div class="text-muted small mt-1">14h ago</div>
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="dropdown-menu-footer">
-									<a href="#" class="text-muted">Show all notifications</a>
-								</div>
-							</div>
-						</li> -->
-						<!-- <li class="nav-item dropdown">
-							<a class="nav-icon dropdown-toggle" href="#" id="messagesDropdown" data-bs-toggle="dropdown">
-								<div class="position-relative">
-									<i class="align-middle" data-feather="message-square"></i>
-								</div>
-							</a>
-							<div class="dropdown-menu dropdown-menu-lg dropdown-menu-end py-0"
-								aria-labelledby="messagesDropdown">
-								<div class="dropdown-menu-header">
-									<div class="position-relative">
-										4 New Messages
-									</div>
-								</div>
-								<div class="list-group">
-									<a href="#" class="list-group-item">
-										<div class="row g-0 align-items-center">
-											<div class="col-2">
-												<img src="img/avatars/avatar-5.jpg" class="avatar img-fluid rounded-circle"
-													alt="Vanessa Tucker">
-											</div>
-											<div class="col-10 ps-2">
-												<div class="text-dark">Vanessa Tucker</div>
-												<div class="text-muted small mt-1">Nam pretium turpis et arcu. Duis arcu
-													tortor.</div>
-												<div class="text-muted small mt-1">15m ago</div>
-											</div>
-										</div>
-									</a>
-									<a href="#" class="list-group-item">
-										<div class="row g-0 align-items-center">
-											<div class="col-2">
-												<img src="img/avatars/avatar-2.jpg" class="avatar img-fluid rounded-circle"
-													alt="William Harris">
-											</div>
-											<div class="col-10 ps-2">
-												<div class="text-dark">William Harris</div>
-												<div class="text-muted small mt-1">Curabitur ligula sapien euismod vitae.
-												</div>
-												<div class="text-muted small mt-1">2h ago</div>
-											</div>
-										</div>
-									</a>
-									<a href="#" class="list-group-item">
-										<div class="row g-0 align-items-center">
-											<div class="col-2">
-												<img src="img/avatars/avatar-4.jpg" class="avatar img-fluid rounded-circle"
-													alt="Christina Mason">
-											</div>
-											<div class="col-10 ps-2">
-												<div class="text-dark">Christina Mason</div>
-												<div class="text-muted small mt-1">Pellentesque auctor neque nec urna.</div>
-												<div class="text-muted small mt-1">4h ago</div>
-											</div>
-										</div>
-									</a>
-									<a href="#" class="list-group-item">
-										<div class="row g-0 align-items-center">
-											<div class="col-2">
-												<img src="img/avatars/avatar-3.jpg" class="avatar img-fluid rounded-circle"
-													alt="Sharon Lessman">
-											</div>
-											<div class="col-10 ps-2">
-												<div class="text-dark">Sharon Lessman</div>
-												<div class="text-muted small mt-1">Aenean tellus metus, bibendum sed,
-													posuere ac, mattis non.</div>
-												<div class="text-muted small mt-1">5h ago</div>
-											</div>
-										</div>
-									</a>
-								</div>
-								<div class="dropdown-menu-footer">
-									<a href="#" class="text-muted">Show all messages</a>
-								</div>
-							</div>
-						</li> -->
+						<button class="theme-toggle" id="theme-toggle" title="Activar/desactivar modo oscuro" aria-label="auto" aria-live="polite" style="border: none; background: none; color: black;">
+							<svg class="sun-and-moon" aria-hidden="true" width="24" height="24" viewBox="0 0 24 24">
+							  <mask class="moon" id="moon-mask">
+								<rect x="0" y="0" width="100%" height="100%" fill="white" />
+								<circle cx="24" cy="10" r="6" fill="black" />
+							  </mask>
+							  <circle class="sun" cx="12" cy="12" r="6" mask="url(#moon-mask)" fill="currentColor" />
+							  <g class="sun-beams" stroke="currentColor">
+								<line x1="12" y1="1" x2="12" y2="3" />
+								<line x1="12" y1="21" x2="12" y2="23" />
+								<line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
+								<line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
+								<line x1="1" y1="12" x2="3" y2="12" />
+								<line x1="21" y1="12" x2="23" y2="12" />
+								<line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
+								<line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
+							   </g>
+							</svg>
+						  </button>
+						  
+						  
+						  
 						<li class="nav-item dropdown">
 							<a class="nav-icon dropdown-toggle d-inline-block d-sm-none" href="#"
 								data-bs-toggle="dropdown">
@@ -290,13 +163,6 @@
 							<div class="dropdown-menu dropdown-menu-end">
 								<a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1"
 										data-feather="user"></i> Perfil</a>
-								<!-- <a class="dropdown-item" href="#"><i class="align-middle me-1" data-feather="pie-chart"></i>
-									Analytics</a>
-								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="index.html"><i class="align-middle me-1"
-										data-feather="settings"></i> Settings & Privacy</a>
-								<a class="dropdown-item" href="#"><i class="align-middle me-1"
-										data-feather="help-circle"></i> Help Center</a> -->
 								<div class="dropdown-divider"></div>
 								<a class="dropdown-item" href="{{url_for('login')}}">Cerrar Sesión</a>
 							</div>
@@ -315,13 +181,14 @@
 				crossorigin="anonymous"></script>
 			<script src="{{ url_for('static', filename='dashboard/js/app.js') }}"></script>
 			<script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.js"></script>
+			<!-- Datatables libraries -->
 			<script src="https://cdn.datatables.net/2.0.3/js/dataTables.min.js"></script>
+
+
 			<script>
 				var username = "JeanCHV";
-
 				// URL de la API de GitHub para obtener información del usuario
 				var url = "https://api.github.com/users/" + username;
-
 				// Realizar una solicitud GET a la API de GitHub
 				fetch(url)
 					.then(response => response.json())
@@ -338,9 +205,6 @@
 			<main class="content" id="container-body">
 				{%block contenido %} {% endblock %}
 			</main>
-
-
-
 			<footer class="footer">
 				<div class="container-fluid">
 					<div class="row text-muted">
@@ -348,26 +212,9 @@
 							<p class="mb-0">
 								<a class="text-muted" href="https://adminkit.io/"
 									target="_blank"><strong>USAT</strong></a> - <a class="text-muted"
-									href="https://adminkit.io/" target="_blank"><strong>Sistema de Gestión de Carga
-										Academica</strong></a> &copy;
+									href="https://adminkit.io/" target="_blank"><strong>2024-I</strong></a> &copy;
 							</p>
 						</div>
-						<!-- <div class="col-6 text-end">
-							<ul class="list-inline">
-								<li class="list-inline-item">
-									<a class="text-muted" href="https://adminkit.io/" target="_blank">Support</a>
-								</li>
-								<li class="list-inline-item">
-									<a class="text-muted" href="https://adminkit.io/" target="_blank">Help Center</a>
-								</li>
-								<li class="list-inline-item">
-									<a class="text-muted" href="https://adminkit.io/" target="_blank">Privacy</a>
-								</li>
-								<li class="list-inline-item">
-									<a class="text-muted" href="https://adminkit.io/" target="_blank">Terms</a>
-								</li>
-							</ul>
-						</div> -->
 					</div>
 				</div>
 			</footer>
@@ -376,5 +223,19 @@
 
 
 </body>
+    <!-- Script para mostrar la pantalla de carga al hacer clic en los enlaces de la barra lateral -->
+    <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            // Selecciona todos los elementos con la clase 'sidebar-link'
+            var sidebarLinks = document.querySelectorAll(".sidebar-link");
 
+            // Agrega un evento 'click' a cada elemento 'sidebar-link'
+            sidebarLinks.forEach(function(link) {
+                link.addEventListener("click", function() {
+                    // Muestra la pantalla de carga al hacer clic
+                    document.getElementById("loader").style.display = "block";
+                });
+            });
+        });
+    </script>
 </html>
