--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -18,6 +18,8 @@
 	<link rel="stylesheet" href="https://cdn.datatables.net/2.0.3/css/dataTables.dataTables.css">
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs5/dt-2.0.3/datatables.min.css" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+
     <style>
         .loader-wrapper {
             position: fixed;
@@ -117,7 +119,7 @@
 			</div>
 		</nav>
 
-		<div class="main">
+		<div class="main bg-grey-usat">
 
 			<nav class="navbar navbar-expand navbar-light navbar-bg sticky-top">
 				<a class="sidebar-toggle js-sidebar-toggle">
