--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -32,11 +32,11 @@
                         <h3>Bienvenido</h3>
                         <p class="mb-4">Ingrese sus credenciales para acceder al sistema
                         </p>
-                        <form action="#" method="post">
+                        <form action="{{url_for('index')}}" method="post">
                             <div class="form-group first">
 
-                                <input type="text" class="form-control" placeholder="Usuario
-                                    id=" username">
+                                <input type="text" class="form-control" placeholder="Usuario"
+                                    id="username">
                             </div>
                             <div class="form-group last mb-3">
                                 <input type="password" class="form-control" placeholder="Contraseña" id="password">
@@ -49,9 +49,9 @@
                                 </label>
                                 <span class="ml-auto"><a href="#" class="forgot-pass">Olvidé mi Contraseña</a></span>
                             </div>
-                            <form action="{{ url_for('index') }}" >
-                                <input type="submit" value="Acceder al Sistema" class="btn btn-block btn-primary">
-                            </form>
+                            <div >
+                                <button type="submit"class="btn btn-block btn-primary">Acceder al sistema</button>
+                            </div>
                             
 
                         </form>
