--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -14,7 +14,9 @@
     background-color: #E8EBF1;
 }
 
-
+.bg-blue-horario-usat{
+    background-color: #2196F3;
+}
 
 .text-red-usat{
     color: #E33439
