--- a/templates/horarios/horarios_por_docente.html
+++ b/templates/horarios/horarios_por_docente.html
@@ -9,34 +9,137 @@
     </ol>
 </nav>
 
-<ul class="bg-red-usat nav p-3">
-    <li class="nav-item">
-      <a>Horarios asignados por docente</a><br>
-    </li>
-</ul>
+<section class="col-12">
+    <ul class="bg-red-usat nav p-3">
+        <li class="nav-item">
+          <a>Horarios asignados por docente</a><br>
+        </li>
+    </ul>
+    
+    <div class="row align-items-center m-2 p-3 row-cols-1" style="background-color: white;">
+        <div class="mb-3 row">
+            <label for="staticEmail" class="col-sm-2 col-form-label">Semestre académico</label>
+            <div class="col-sm-10">
+                <select class="form-select" aria-label="Default select example">
+                    <option selected>[-- SELECCIONE --]</option>
+                    <option value="1">2024-I</option>
+                    <option value="2">2023-II</option>
+                    <option value="3">2023-I</option>
+                    <option value="4">2022-II</option>
+                    <option value="5">2021-I</option>
+                    <option value="4">2020-II</option>
+                    <option value="5">2020-I</option>
+                </select>
+            </div>
+        </div>
+        <div class="mb-3 row">
+            <label for="inputPassword" class="col-sm-2 col-form-label">Docente</label>
+            <div class="col-sm-10">
+                <input type="email" class="form-control" id="exampleFormControlInput1">
+            </div>
+        </div>
+        <table class="table table-bordered text-center">
+            <thead class="border border-warning bg-blue-horario-usat">
+              <tr class="">
+                <th scope="col" class="border border-warning text-light">Hora</th>
+                <th scope="col" class="border border-warning text-light">Lunes</th>
+                <th scope="col" class="border border-warning text-light">Martes</th>
+                <th scope="col" class="border border-warning text-light">Miércoles</th>
+                <th scope="col" class="border border-warning text-light">Jueves</th>
+                <th scope="col" class="border border-warning text-light">Viernes</th>
+                <th scope="col" class="border border-warning text-light">Sábado</th>
+                <th scope="col" class="border border-warning text-light">Domingo</th>
+              </tr>
+            </thead>
+            <tbody class="" style="background-color: #EEEEEE;">
+              <tr class="">
+                <th scope="row">7:00 a.m. - 8:00 a.m.</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="row">8:00 a.m. - 9:00 a.m.</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <th scope="row">9:00 a.m. - 10:00 a.m.</th>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table>
+    </div>
+</section>
 
-<div class="row g-3 align-items-center m-3 p-3" style="background-color: white;">
-    <div class="mb-3 row">
-        <label for="staticEmail" class="col-sm-2 col-form-label">Semestre académico</label>
-        <div class="col-sm-10">
-            <select class="form-select" aria-label="Default select example">
-                <option selected>[-- SELECCIONE --]</option>
-                <option value="1">2024-I</option>
-                <option value="2">2023-II</option>
-                <option value="3">2023-I</option>
-                <option value="4">2022-II</option>
-                <option value="5">2021-I</option>
-                <option value="4">2020-II</option>
-                <option value="5">2020-I</option>
-            </select>
+<nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item" href="Home"><a>Inicio</a></li>
+        <li class="breadcrumb-item active" data-href="servicios.html"><a>Servicios</a></li>
+
+    </ol>
+</nav>
+<script>
+    $(".breadcrumb-item").on("click", function (e) {
+        var tmphref = $(this).attr("data-href");
+        if (tmphref) {
+            $("#container-body").load("/Pages/" + tmphref, function () { });
+        }
+        else {
+            window.location.reload();
+        }
+    });
+
+
+</script>
+
+<div class="card" id="card_servicios">
+    <div class="card-header bg-primary text-white" id="headingOne" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
+        Servicios
+    </div>
+    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-bs-parent="#miAccordion">
+
+        <div class="card-body">
+            <div class="search-box">
+                <div class="col-sm-12">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <input type="text" id="buscar_servicio" class="form-control" placeholder="Buscar Servicio...">
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-body show">
+                <table id="tabla_servicios" class="table table-striped table-hover table-bordered">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Nombre</th>
+                            <th>Precio Minimo</th>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
         </div>
     </div>
-    <div class="mb-3 row">
-        <label for="inputPassword" class="col-sm-2 col-form-label">Docente</label>
-        <div class="col-sm-10">
-            <input type="email" class="form-control" id="exampleFormControlInput1">
-        </div>
-    </div>
+    <a href="#" id="btn_agregar_servicio" data-href="servicio_agregar.html" class="btn btn-success">Agregar Nuevo Servicio</a>
 </div>
+
 
 {% endblock %}
