--- a/templates/login/login.html
+++ b/templates/login/login.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='login/css/owl.carousel.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='login/css/bootstrap.min.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='login/css/style.css') }}">
+    <script src="{{ url_for('static', filename='login/js/login.js') }}"></script>
 
     <title>USAT - Iniciar Sesion </title>
     <style>
@@ -63,24 +64,25 @@
                         <h3>Bienvenido</h3>
                         <p class="mb-4">Ingrese sus credenciales para acceder al sistema
                         </p>
-                        <form action="#" method="post">
+                        <form action="{{ url_for('procesar_login') }}" method="post">
                             <div class="form-group first">
 
-                                <input type="text" class="form-control" placeholder="Usuario" id="username">
+                                <input type="text" class="form-control" placeholder="Usuario" id="username" name="username" required>
                             </div>
                             <div class="form-group last mb-3">
-                                <input type="password" class="form-control" placeholder="Contraseña" id="password">
+                                <input type="password" class="form-control" placeholder="Contraseña" id="password" name="password" required>
                             </div>
 
                             <div class="d-flex mb-5 align-items-center">
                                 <label class="control control--checkbox mb-0"><span class="caption">Recordar</span>
-                                    <input type="checkbox" checked="checked" />
+                                    <input type="checkbox" checked="checked" id="recordar_check" name="recordar_check">
                                     <div class="control__indicator"></div>
                                 </label>
                                 <span class="ml-auto"><a href="#" class="forgot-pass">Olvidé mi Contraseña</a></span>
                             </div>
 
-                            <a href="{{url_for('index')}}" class="btn btn-primary btn-lg btn-block my-4"><strong>Acceder al Sistema</strong></a>
+                            <!-- <a href="{{url_for('index')}}" class="btn btn-primary btn-lg btn-block my-4"><strong>Acceder al Sistema</strong></a> -->
+                            <button type="submit" class="tn btn-primary btn-lg btn-block my-4"><strong>Acceder al Sistema</strong></button>
 
                         </form>
                     </div>
@@ -110,6 +112,8 @@
     <script src="{{ url_for('static', filename='login/js/popper.min.js') }}"></script>
     <script src="{{ url_for('static', filename='login/js/bootstrap.min.js') }}"></script>
     <script src="{{ url_for('static', filename='login/js/main.js') }}"></script>
+    
+    
 </body>
 
 </html>
